--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -26,7 +26,7 @@
     background-image: url('/bg-noise.png');
     background-position: center;
     animation: BgNoise 1s steps(2) infinite;
-    opacity: 1;
+    opacity: .5;
   }
 
   @keyframes BgNoise {
