--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -10,7 +10,7 @@
 
   --color-secondary-light: #D1E7F3;
   --color-secondary: #A5C4D4;
-  --color-secondary-dark: #8499B1;
+  --color-secondary-dark: #566a81;
 
   --color-dark: #0A0A0A;
 }
