--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -4,14 +4,15 @@
 
 
 :root {
-  --color-primary-light: #E1E7FE;
-  --color-primary: #516CF7;
-  --color-primary-dark: #2A337E;
+  --color-primary-light: #FFFEDA;
+  --color-primary: #FEFCBF;
+  --color-primary-dark: #F4CE10;
 
   --color-secondary-light: #D1E7F3;
   --color-secondary: #A5C4D4;
   --color-secondary-dark: #566a81;
 
+  --background: #FAFCF7;
   --color-dark: #0A0A0A;
 }
 
@@ -50,4 +51,42 @@ canvas {
   outline: none;
   /* mix-blend-mode: exclusion; */
   z-index: 1;
+}
+
+
+@font-face {
+  font-family: 'GrandSlang';
+  src: url('/fonts/grandslang/GrandSlang-Roman.eot');
+  src: url('/fonts/grandslang/GrandSlang-Roman.eot?#iefix') format('embedded-opentype'),
+       url('/fonts/grandslang/GrandSlang-Roman.woff2') format('woff2'),
+       url('/fonts/grandslang/GrandSlang-Roman.woff') format('woff'),
+       url('/fonts/grandslang/GrandSlang-Roman.ttf') format('truetype'),
+       url('/fonts/grandslang/GrandSlang-Roman.svg#GrandSlang-Roman') format('svg');
+  font-weight: normal;
+  font-style: normal;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: 'Outfit';
+  src: url('/fonts/outfit/Outfit-Regular.ttf') format('truetype');
+  font-weight: 400;
+  font-style: normal;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: 'Outfit';
+  src: url('/fonts/outfit/Outfit-Medium.ttf') format('truetype');
+  font-weight: 500;
+  font-style: normal;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: 'Outfit';
+  src: url('/fonts/outfit/Outfit-SemiBold.ttf') format('truetype');
+  font-weight: 600;
+  font-style: normal;
+  font-display: swap;
 }
