--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -10,10 +10,16 @@
 
   --color-secondary-light: #79819A;
   --color-secondary: #47516B;
-  --color-secondary-dark: #170F2E;
+  --color-secondary-dark: #0A0A0A;
 
   --background: #FAFCF7;
   --color-dark: #0A0A0A;
+}
+
+html {
+  scroll-behavior: smooth;
+  scrollbar-color: var(--color-secondary) white;
+  scrollbar-width: thin;
 }
 
 @layer utilities {
