feat projects provider/ context & refacto all the fetch in pages

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -21,6 +21,12 @@ html {
   scrollbar-color: var(--color-secondary) transparent;
   scrollbar-width: thin;
 }
+body {
+  background: var(--background);
+}
+main {
+  overflow: hidden;
+}
 
 @layer utilities {
   .w-full-8 {
